fix(root): fix issue where status icons are hidden behind gatsby-plugin-image

--- a/src/components/DoDontCaution/index.css
+++ b/src/components/DoDontCaution/index.css
@@ -36,6 +36,7 @@
   border-radius: 50%;
   box-shadow: var(--ic-elevation-overlay);
   text-align: center;
+  z-index: 1;
 }
 
 .do-dont-caution-containers > svg {
